# bazelexample

./: .bazelrc  README.md  main.cc
00_terminal_basics/: TerminalCheatSheet.ipynb
00_terminal_basics/.ipynb_checkpoints/: Terminal Exercise-checkpoint.ipynb
01_minimal/: MODULE.bazel  MinimalExampleExercise.ipynb  README.md  main.py
01_minimal/.ipynb_checkpoints/: BUILD-checkpoint  MinimalExampleExercise-checkpoint.ipynb
02_library_and_test/: BUILD  LibraryAndTestExercise.ipynb
02_library_and_test/.ipynb_checkpoints/: LibraryAndTestExercise-checkpoint.ipynb  main-checkpoint.py
02_library_and_test/librarys/: BUILD  math.py
02_library_and_test/librarys/.ipynb_checkpoints/: converter-checkpoint.py  converter_test-checkpoint.py  math_test-checkpoint.py
03_pip_integration/: BUILD.bazel  PythonAndPip.ipynb  main.py
03_pip_integration/.ipynb_checkpoints/: BUILD-checkpoint.bazel  MODULE-checkpoint.bazel  PythonAndPip-checkpoint.ipynb  requirements-checkpoint.txt  requirements_lock-checkpoint.txt
04_docker/: .bazelrc  BUILD.bazel  MODULE.bazel  requirements_lock.txt
