module(name="oci-integration")

bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "rules_oci", version = "2.2.2")
bazel_dep(name = "aspect_rules_py", version = "1.3.2")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python_version = "3.10"

python.toolchain(python_version = python_version, is_default = True)

pip.parse(
    hub_name = "pypi",
    python_version = python_version,
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pypi")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu",
    image = "ubuntu",
    platforms = [
        "linux/amd64",
    ],
    tag = "24.04",
)
use_repo(oci, "ubuntu", "ubuntu_linux_amd64")
