load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")


py_binary(
  name = "main",
  srcs = ["main.py"],
  deps = [
      "@pypi//numpy",
  ]
)

# This tells bazel to generate a requirements lock file
compile_pip_requirements(
    name = "requirements",
    src = "requirements.txt",
    requirements_txt = "requirements_lock.txt"
)