module(name="pip-integration")

bazel_dep(name = "rules_python", version = "1.3.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python_version = "3.10"

python.toolchain(python_version = python_version, is_default = True)

pip.parse(
    hub_name = "pypi",
    python_version = python_version,
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pypi")